Small temp fix for content shift causing navbar background misalignment

--- a/src/app/navbar.css
+++ b/src/app/navbar.css
@@ -13,7 +13,7 @@
     position: absolute;
     background-color: #9f1239;
     border-radius: 20px;
-    height: 100%;
+    height: 44px;
     width: 100px;
     transition: all 0.3s ease-in-out;
     z-index: 1;
